Fixed the dropdown overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,24 +90,28 @@ footer #footer-info #copyright-section {
 }
 
 .product-card {
-    background-color: white;
-    border-radius: 7px;
-    width: 300px;
-    height: auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    text-align: center;
-    overflow: hidden;
+  position: relative;
+  display: flex;
+  box-sizing: border-box;
+  background-color: white;
+  flex-direction: column;
+  border-radius: 7px;
+  width: 300px;
+  height: auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 15px;
+  text-align: center;
+  overflow: hidden;
 }
 
 select {
-    max-width: 100%;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
+  max-width: 100%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 #color-Dropdown {
-    overflow-x: auto;
+  overflow-x: auto;
 }
 
 
